Move to node.js

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,5 +1,14 @@
-﻿.body-content {
+﻿html,body {
+    height:100%;
+}
+
+.body-content {
     padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.container {
+    height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -7,7 +16,6 @@
         padding-top: 50px;
         padding-left: 15px;
         padding-right: 15px;
-        height: 100%;
     }	
 }
 
